# Cataclysm-DDA

./: .appveyor.yml  .astylerc  .bash_history  .clang-format  .clang-tidy  .cmake-format.yml  .dir-locals.el  .editorconfig  .flake8  .game.cpp.swp  .gitattributes  .gitignore  .gitmessage  .gitmodules  .lgtm.yml  .merge_file_a01052  .merge_file_a01088  .merge_file_a02944  .merge_file_a03604  .merge_file_a03704  .merge_file_a04876  .merge_file_a04896  .merge_file_a05176  .merge_file_a05208  .merge_file_a05248  .merge_file_a05376  .merge_file_a05620  .merge_file_a06056  .merge_file_a06068  .merge_file_b01088  .merge_file_b01192  .merge_file_b02928  .merge_file_b03704  .merge_file_b05576  .merge_file_b05620  .merge_file_b05812  .merge_file_b06112  .travis.yml  1.lua  AGENTS.md  (+522 more)
data/: .gitignore  Assassin.template  Barbarian.template  CMakeLists.txt  Cataclysm - PM.xpadderprofile  Crafter.template  FONTDATA  LAB_NOTES  NAMES_LAST  NPC_HINTS  SKILLS  application_manifest.xml  astyled_whitelist  auto_pickup.txt  cataclysm-dda.desktop  changelog.txt  colors.txt  credits  fontdata.json  fontlist.txt  gfx.txt  keymap.txt  main.lua  modinfo.json  mods - Shortcut.lnk  motd  npc.txt  options.txt
data/chai/: flag_logic.chai
data/core/: basic.json  bionics.json  damage_indicators.json  external_options.json  game_balance.json  help.json  hints.json  material.json  mod_migrations.json  monstergroups.json  overmap_terrain.json  sentinels.json  techniques.json  terrain.json  tips.json  tool_qualities.json  traps.json  vehicle_parts.json  weather.json  world_option_sliders.json
data/credits/: cs.credits  de.credits  el.credits  en.credits  es_AR.credits  es_ES.credits  fil_PH.credits  fr.credits  hu.credits  id.credits  it_IT.credits  ja.credits  ko.credits  nb.credits  nl_BE.credits  pl.credits  pt.credits  pt_BR.credits  ru.credits  tr.credits  uk_UA.credits  zh_CN.credits  zh_TW.credits
data/font/: terminus.fon
data/help/: texts.json
data/json/: Boxing.json  Gym  LOADING_ORDER.md  achievements.json  addictions.json  addictions_eocs.json  ammo_effects.json  anatomy.json  armor.json  ascii_arts.json  attack_vectors.json  bash_damage_profiles.json  bionic_limbs  bionic_spells.json  bionics.json  bionicsDisplayType.json  bionics_display_types.json  bionics_migrations.json  body_parts.json  boxing.json  bullet_pulling.json  butchery_harvest.json  butchery_requirements.json  campsite.json  character_modifiers.json  climbing.json  clothing_mods.json  clothinglayers.json  colors.json  conducts.json  connect_groups.json  construction.json  construction_category.json  construction_group.json  corpses.json  counters.json  damage_types.json  deconstruction.json  default_blacklist.json  difficulty.json  (+188 more)
data/mods/: First Test Files.txt  default.json  dev-default-mods.json  folder_info.txt  modinfo.json  obsolete-mods.json  replacements.json  techniques.json  tools.json  weather.json
data/motd/: ar.motd  cs.motd  de.motd  el.motd  en.motd  es_AR.motd  es_ES.motd  fil_PH.motd  fr.motd  ga_IE.motd  hu.motd  id.motd  it_IT.motd  ja.motd  ko.motd  nb.motd  pl.motd  pt_BR.motd  ru.motd  tr.motd  uk_UA.motd  zh_CN.motd  zh_TW.motd
data/names/: en.json  fr.json  ja.json  ko.json  ru.json  worlds.json  zh_CN.json  zh_TW.json
data/osx/: AppIcon.icns  Cataclysm.sh  DS_Store  dmgsettings.py
data/raw/: bionics.json  colors.json  documentedchangelog.txt  dreams.json  help.json  imgui_style.json  item_groups.json  keybindings.json  languages.json  license  martialarts.json  materials.json  monstergroups.json  monsters.json  mutations.json  mutations_cat.json  names.json  parrot.json  professions.json  recipes.json  reference.txt  skills.json  snippets.json  sokoban-nethack.license.txt  sokoban.txt  techniques.json  traits.json  vehicle_parts.json  vehicles.json
data/recycling/: halloween_special.json  instruments.json
data/shaders/: grayscale.frag  memory_blue_dark.frag  memory_darken.frag  memory_sepia_dark.frag  memory_sepia_light.frag  nightvision.frag  overexposed.frag
data/sound/: musicset.json  soundset.json
lang/: CMakeLists.txt  Makefile  compile_mo.sh  discard_invalid_po.sh  extract_json_strings.py  merge_po.sh  strip_line_numbers.py  unicode_check.py  update_pot.sh  update_stats.sh
lua/: CMakeLists.txt  autoexec.lua  class_definitions.lua  dkjson.lua  export-c++-definitions-to-lua.py  generate_bindings.lua  generate_wikidocs.lua  generated_class_definitions.lua  json_verifier.lua  log.lua  parser.py
src/: .game.h.kate-swp  Android.mk  BonusUser.cpp  BonusUser.h  CMakeLists.txt  Messages.cpp  MonsterDynamic.cpp  MonsterDynamic.h  PerlinNoise.hpp  SDLMain.m  UIHandler.cpp  UIHandler.h  a_star.h  achievement.cpp  achievement.h  action.cpp  action.h  active_item_cache.cpp  active_item_cache.h  active_tile_data.cpp  active_tile_data.h  activity_actor.cpp  activity_actor.h  activity_actor_definitions.h  activity_handlers.cpp  activity_handlers.h  activity_item_handling.cpp  activity_item_handling.h  activity_tracker.cpp  activity_tracker.h  activity_type.cpp  activity_type.h  addiction.cpp  addiction.h  advanced_inv.cpp  advanced_inv.h  advanced_inv_area.cpp  advanced_inv_area.h  advanced_inv_base.cpp  advanced_inv_base.h  (+1218 more)
tests/: CMakeLists.txt  Makefile  act_build_test.cpp  active_item_cache.cpp  active_item_cache_test.cpp  active_item_test.cpp  activity_scheduling_helper.cpp  activity_scheduling_helper.h  activity_test.cpp  activity_tracker_test.cpp  addiction_test.cpp  advanced_inventory_test.cpp  algo_test.cpp  ammo_set_test.cpp  ammo_test.cpp  archery_damage_test.cpp  array_view_test.cpp  assertion_helpers.h  battery_density_test.cpp  battery_mod_test.cpp  behavior_test.cpp  bionics_test.cpp  butcher_corpse_test.cpp  calendar_test.cpp  cardio_test.cpp  cartesian_product_test.cpp  cata_catch.h  cata_generators.cpp  cata_generators.h  cata_utility_test.cpp  cata_variant_test.cpp  catacharset_test.cpp  cell_list_test.cpp  char_addiction_test.cpp  char_biometrics_test.cpp  char_bmi_test.cpp  char_edible_rating_test.cpp  char_exposure_test.cpp  char_healing_test.cpp  char_healthy_test.cpp  (+309 more)
(+27798 files in other folders)
